--- a/TestWPPL/App.xaml
+++ b/TestWPPL/App.xaml
@@ -9,6 +9,7 @@
                 <materialDesign:CustomColorTheme BaseTheme="Light" PrimaryColor="LightCyan" SecondaryColor="#0cc7ab" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="Simple Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
