--- a/TestWPPL/SuperAdmin/ListPolyMaster/EditPolyMaster/EditPolyMasterPage.xaml
+++ b/TestWPPL/SuperAdmin/ListPolyMaster/EditPolyMaster/EditPolyMasterPage.xaml
@@ -10,7 +10,7 @@
     <Border x:Name="roundBorder" BorderThickness="0" CornerRadius="20" Background="#FFF5FAFD" Margin="0,0,0,0">
         <Grid Background="Transparent" Margin="0,0,0,49.6" MinHeight="68" MinWidth="68">
             <TextBlock Margin="58.85,116,0,0" Text="Nama Poli  : " TextWrapping="Wrap" VerticalAlignment="Top" Opacity="0.925" HorizontalAlignment="Left" Height="29.026" Width="80.55" RenderTransformOrigin="0.501,7.18" Foreground="Black" FontSize="14"/>
-            <TextBox Height="30" Margin="182.8,106,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168.4" Name="name_txt" HorizontalAlignment="Left" FontSize="18" FontWeight="Bold" Opacity="0.8" RenderTransformOrigin="0.475,1.283"/>
+            <TextBox Height="30" Margin="182.8,106,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168.4" Name="name_txt" HorizontalAlignment="Left" FontSize="18" Opacity="0.8" RenderTransformOrigin="0.475,1.283"/>
 
             <Button Name="UpdatePolyMasterBtn" Content="Update" Margin="156.4,297.8,0,49.6" VerticalAlignment="Center" Click="btnUpdatePolyMaster" HorizontalAlignment="Left" Height="35" RenderTransformOrigin="-0.497,0.614" Width="126.437"/>
             <Button x:Name="uploadImage_btn" Content="Upload Image" Click="upload_btn" HorizontalAlignment="Left" Height="31.2" Margin="182.8,167.3,0,0" VerticalAlignment="Top" Width="168.4" Background="#FFFAFAFA" Foreground="#FF626B6B" BorderBrush="#FF646B6B" FontWeight="Normal" FontFamily="Open Sans"/>
